--- a/particles-config.json
+++ b/particles-config.json
@@ -1,10 +1,10 @@
 {
   "particles": {
     "number": {
-      "value": 160,
+      "value": 400,
       "density": {
         "enable": true,
-        "value_area": 800
+        "value_area": 900
       }
     },
     "color": {
@@ -18,11 +18,6 @@
       },
       "polygon": {
         "nb_sides": 5
-      },
-      "image": {
-        "src": "img/github.svg",
-        "width": 100,
-        "height": 100
       }
     },
     "opacity": {
@@ -47,7 +42,7 @@
     },
     "line_linked": {
       "enable": false,
-      "distance": 150,
+      "distance": 100,
       "color": "#ffffff",
       "opacity": 0.4,
       "width": 1
@@ -88,10 +83,10 @@
         }
       },
       "bubble": {
-        "distance": 203.7962037962038,
-        "size": 119.88011988011989,
-        "duration": 1.7582417582417584,
-        "opacity": 0.47152847152847155,
+        "distance": 150,
+        "size": 60,
+        "duration": 2,
+        "opacity": 0.5,
         "speed": 3
       },
       "repulse": {
